tests/baselines/reference/parserErrorRecovery_ParameterList1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ParameterList1.ts (1 errors) ====
    function f(a {
                 ~
!!! parserErrorRecovery_ParameterList1.ts(1,14): error TS1005: ')' expected.
    }